fix: permit login using email

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,22 +4,23 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:LBNIow==,iv:ioIuwrjV9a9dDEg0yIb4l+f/1unBiqSfvtc6HOCdDwQ=,tag:IrtDD1E7X19UpyHQ3QCH+g==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:PJfsPZBFuVMi5GczuAk=,iv:IeKkmsTKnNp2hA6mSpXerZcfkS/kRZAoP6p8hEV3fsc=,tag:Vx6Y4z/0J/vpcgeWcTlKDg==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:sYDVHiwuk7nelYpU2Jg=,iv:Pqb1KM1cih4GTlKlWAJUCfELwoqD3OK9qq6AOwOlx8w=,tag:d2uSF5HMpUTQAmhpD8AiYA==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:j5dgJo+U/w==,iv:+7Y9eY23sEN9429A6WGNb0fVEIo89TrSHbo2t0NLY/w=,tag:cLl3NlCCIi4zgDrWlAdxoA==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:C4QBhA==,iv:iWbwsI56v+pYaoCYXqv9EErpxo4A2E8hYwG8ZGgUGOk=,tag:7W0o+Y2jQwP3Dv/327IGvg==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:8HNJW2k3Wg==,iv:pzi0KcPoEJCrlrfzDpJzLsCrSeQlrmu/lUcDbClwYy4=,tag:yhXiXAVcnWCsNan1deVMqA==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:lwEp/PiOjA==,iv:sox370mIpY5JPPbspIY9QpeYUxEyX/aENiRNx0dLrx4=,tag:u080XCa7t3+lWKcVQ1p8JA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:QCNRPlB2,iv:4QeYTtGjenQA5a8PGuGEAsl+RYUJaGqy4T8tL+CWEeo=,tag:ByHjrDJ+VkYwPwI3HQS8og==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:NLYRmw==,iv:LI7PEwidHLw3EI9M0b2R6HoI2m+oNnpO2jdwbsJUm/c=,tag:S4CHeWN6AkxpPRjz5yjoxA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:vndzd1k=,iv:V+luAtTNi9lmqnN05SGuyisO/rldkuE0SFrfOgZwmEs=,tag:GBTXycSZERig2G4BQ0zCkg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:6d4n4AZ7gRBxSPbP7T9JAfhn8kXwkp7HstDPDPU=,iv:/YwzSX1usycpCPIWd3iTnazHhW+mIvBf/t8zPOhiTsE=,tag:D2qyVsM243FoWKoKDYl0Xw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:QRvC88TyoR0WJova7GczWQqJjqVC3lDAcdiaviK/2fr8fC/R,iv:jTj6bsMAZuUNoiyFFAqdhYmZ6TPGKIcNpJQC/o6dL24=,tag:WspmQ3aQa76F5YvNriJ0SA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:Sq2K7Mhe5vj5+eVAgRSx/1NzpSI=,iv:ktQMR9o+WIknwnyOoJSMvS1jqkI7V7PgTxoPRayfvhk=,tag:+fl/+UpjhWvgWd/AVGXE0A==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:/GHzJWR5nJDjlzZapZvytbO4L32I0PFpnb1yE9PYgOA8Z7p+YhvK9da80uot,iv:/da0j4dzqxzPSuuabxx6Rb3FeaQtNJaTToVKzx9sNBk=,tag:ojH7bny2rLUfXmQnKRx9BA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:H8GAeyD6++O/f4hf/J+v+n58I3PwjAC05Z3TQd3irVknrih52wTdI1Y=,iv:PVhIK4MzWMorXA+trxhOm54dJDDzITl5niT97HgjAoI=,tag:JrwsVc+3NzEKl7Mcv3wRfA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:89R1KiX1/aKjPuCaTo5yq3GUlbHEdo6tMxzcVlhjYF/n1anMkTSqIZIliVY=,iv:QkchGhF4bqlYXN8npfjG6KBgl0tIZCZZ6//2vFZMYJk=,tag:3BMrVTKnzqf+CTAJQTyyzQ==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:HFBN+A==,iv:aoPAf/patsE6P4o0qQE/Qhb3IWllZEkgjBGm1k2+n0s=,tag:eHLeN39K+oUxCPZLBQ+j6g==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:3yuF7BWt1PbfEMKG9w4=,iv:AhrOlnl0TMV5xk/be+ZYyj0ZyC16Dy6Mrl+Df7Nx2A8=,tag:Q0TPodXybzRJRZhxeSEbVA==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:ku+BQYqJ4RL7qXKVzXY=,iv:xxcC0WMr/FzERh1CJUOo0+p4TGMfgjidWHyVq2Hh0Mg=,tag:oEiR97E71TRqrWlpsZbW8g==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:b5A7dyQtWA==,iv:kYzK5gwPdbFn3njNueqpuXB+RBhs+8i2Qf/Mew9tep0=,tag:KpZH/2OqwW5WQ69yYE/Ukg==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:W9MRDQ==,iv:NvzsEaifUyH0hqZSJfhU83rPk0JKqNx2pt238tEAuok=,tag:9VGw16jcbZyBNh12bU3oGw==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:xqJI43pZTA==,iv:QosBmh4xZPN1Tmvwj07BpI0ogggPwAs5XkRb5Bs0I/8=,tag:ym50k60N5yaZWZrYst5Yeg==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:MGk9+vibiA==,iv:TD1L6EHmn+DLY9kCuY81Fy1XbvVOKc2qtVoc3aoTxGs=,tag:E4lMhCyvE4X6AQXJTNpmeA==,type:str]
+    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:VLIF5Q==,iv:hAv7bZlyGD0uSj1Xv1818PkAO/Sayp17Q8eE9phmrl0=,tag:xI9BiEngW16zRE33LNpNmQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:lBy3WZdc,iv:OAuFV14K/SIDxGyIr/9Bu9HZuyTCFuU4xdtRkx7g38g=,tag:DBhoaPhjBImwr/6liLeYrw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:rH6n6w==,iv:fZ9SQ6YbQq+JL095qCFqFAFQ42Vj+oirEIsNSMdQYrk=,tag:QL3pwgB1u+WHKd2X4AlLPw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:2H+Ibzc=,iv:0gHAv2Ldd8IE513EmrgF93rkyLolXkJSan4H+W661Ts=,tag:zAyt+5pkbmhp5KRA0z5HCg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:6apTJ7THRL8tY+zFbfBK4/Yb28kv/4UgqMCJMC4=,iv:rdZhtXCTMjYrrP5wazRINR/0ydApatUX8Il8s2ghP3w=,tag:MivdlL3lZeY0yUA5GQKhkQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:j/omfcZ/kQGC10w5KLxfhgw7+TrJ0h3XQr2y013tcgwEymCk,iv:yBBl1VbNz/GiSA0lBPap2h4wJPgWuX+JZeogMcAOLlE=,tag:28AdOthqc73zXJ56S0z8IQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:jjDGtPWtkA0oifUshgjY/jXqTj8=,iv:l0dWPQMJc+rC2vfst/E01SU192AnpKwY+XQNi3tYf6o=,tag:07z17WixQ9vF4gBhgn23Dg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:dtX74/W8ZFHrKLXv5wzLlyWiFlF+amg3YSXzhACQxDe5/kmueMLHx2AIXKYr,iv:+TKHBjNmFFaw8GwkZVRtILehC4QNQszp8TUuK+NJpAI=,tag:nuoSzbTUb7aHVqLqNBPhzA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:C5BdiDDSLJ62RuuiLR6nr6SURSzSRnXLnMTXAmB5qyfxCAmZImiuaI0=,iv:h+RSXVECv8IMfp+gdHMgq06aeUCg8xZsIcc0sgB5zXw=,tag:A26kNtNmgHa6VlHK2QQjyQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:1DUkMJ6JWG4XcBp/jrsR/zqFHkVmqbZbSW7H0wIYDxGIOU7zrN12rFMkMnE=,iv:Nlaoqdp3zVs+EtPzDcT9PldPe7yEFgqzVhmJ6v+RVys=,tag:eo1ST69jxfas4zDOWFqJdw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +30,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKL0c2T1RYNWVvVmxNKzM0
-            VTR6eS9KZVFjdk4yQnp3bDMwYzEzN1QxZ2tNClVhUEFtdUMvOCttN1EzUVJYV0NJ
-            SXB6V3hCcWdSQWpPYjJvN0R3R01rOFkKLS0tIFhXdEdjQTVTK0VMaEVDZzlhQUlm
-            Vzc2VUN4eHp0enczWVMvdnZqQVgxR0kKJtmQ+UD85UNqQCDfGh/WpzugGzM1vqaz
-            ekPmi5/8ZAxAXfPNPTR++3gqec0akS9IwkmKiQLMWZyIntY8EqWmLg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPdS9QbnJ4N3dOVGlWdmJJ
+            Sm84emIrZ0wxbkNPMzlVbW5WUWxLNzVkL3dnCjNlR1RjVFRpdXk5UUNocVVmOTJU
+            NE1DQnpZK3hMUVJxNE1VVDZSREIwL3MKLS0tIExFMm41Vms5TStnR3ljQzd4ZUJR
+            elh5dWUvK1NUdXRNR2dhaXk4bEpDWWMKf04hrtEFNzZnqp2Xgcurka9JbNMVsCX+
+            Pm3VGYIM+rtrhMx+8IP8ZSdGX3Yf6yG1fX+fGY3elXvY1f81ej16fA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-01T06:04:01Z"
-    mac: ENC[AES256_GCM,data:uxPBcoozY93Gyf6ctvHi8eTpA1h5RfwfgKO9u303Dl6iPfctEL/FU2ldM0ESZD5VbUkwitznj21hjgne5DmvDCJmDf5fLOT9waCndUfoTHfkIps9eIO4mIB94GM49OgueKJ7GPzio41+ECSkVTsRlXxNS6Zn2d926IKDeMYnZ6o=,iv:JIvyk/j8+8Vl9AtRnQ2PxrqGhrYuEJA+2eF08WcJFo4=,tag:H4lYxOJXdk8zHJoKQcqCCw==,type:str]
+    lastmodified: "2023-07-01T06:14:52Z"
+    mac: ENC[AES256_GCM,data:4JxXg0mof7sz7kpvJ2kYYrvLWhgxHkJuDVb5hOu5L0Tt21uHBX008GtJXjig5jUm8LJZFpqf2PjaBNE7XRbQn1B1IjiTaGZbx042jm8JOPgsEMAr2MQAHCuFhJADVTCqxHKfakF/UgXhPXvxMnEnTRDGSw+mGiJMpRvDJ1B1YZk=,iv:4MW33mDf3ws4EWlufKQQMMWogA+WRybXTbikJyoXyLk=,tag:k71sI5BKSaffgTMYcZZ1Ew==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
