feat: start playing with mqtt broker in testlab

--- a/clusters/development/frontend/portal-frontend.yaml
+++ b/clusters/development/frontend/portal-frontend.yaml
@@ -14,7 +14,7 @@ spec:
         app: frontend
     spec:
       containers:
-        - image: ghcr.io/hm-edu/portal-frontend:dev-1c7b08d-1673783298 # {"$imagepolicy": "flux-system:frontend"}
+        - image: ghcr.io/hm-edu/portal-frontend:main-2e4bd15-1688447903 # {"$imagepolicy": "flux-system:frontend"}
           imagePullPolicy: Always
           name: app
           envFrom:
