--- a/clusters/development/acme/acme-image-policy.yaml
+++ b/clusters/development/acme/acme-image-policy.yaml
@@ -8,7 +8,7 @@ spec:
     name: certificates
   filterTags:
     ## use "pattern: '[a-f0-9]+-(?P<ts>[0-9]+)'" if you copied the workflow example using github.run_number
-    pattern: '^master-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^feat-validation-agent-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     numerical:
