--- a/clusters/development/acme/acme.yaml
+++ b/clusters/development/acme/acme.yaml
@@ -60,7 +60,12 @@ data:
         "renegotiation": false
       },
       "storage": "/opt/step",
-      "managementHost": "eab-rest-interface:8081"
+      "managementHost": "eab-rest-interface:8081",
+      "validationBroker": {
+        "host": "validation.pki.hm.edu",
+        "username": "server.hmtest.de",
+        "organization": "hmtest.de"
+      }
     }
 ---
 apiVersion: apps/v1
@@ -86,7 +91,7 @@ spec:
         fsGroup: 1000
       serviceAccountName: portal-acme
       containers:
-        - image: ghcr.io/hm-edu/certificates:master-b87fc0d-1688287538 # {"$imagepolicy": "flux-system:certificates"}
+        - image: ghcr.io/hm-edu/certificates:feat-validation-agent-6cb002e-1688453882 # {"$imagepolicy": "flux-system:certificates"}
           imagePullPolicy: Always
           name: app
           command: ["/usr/local/bin/step-ca"]
@@ -107,6 +112,9 @@ spec:
               name: cert
             - mountPath: /home/step/config
               name: cert-config
+          envFrom:
+            - secretRef:
+                name: certificates
           env:
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
               value: http://jaeger-collector.istio-system.svc:14268/api/traces
