--- a/clusters/development/acme/acme.yaml
+++ b/clusters/development/acme/acme.yaml
@@ -117,7 +117,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: certificates
-                  key: MQTT_PASWORD
+                  key: MQTT_PASSWORD
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
               value: http://jaeger-collector.istio-system.svc:14268/api/traces
       volumes:
