--- a/clusters/development/frontend/portal-frontend-image-policy.yaml
+++ b/clusters/development/frontend/portal-frontend-image-policy.yaml
@@ -8,7 +8,7 @@ spec:
     name: frontend
   filterTags:
     ## use "pattern: '[a-f0-9]+-(?P<ts>[0-9]+)'" if you copied the workflow example using github.run_number
-    pattern: "^main-[a-f0-9]+-(?P<ts>[0-9]+)"
+    pattern: "^dev-[a-f0-9]+-(?P<ts>[0-9]+)"
     extract: "$ts"
   policy:
     numerical:
