fix: allow signup

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,23 +4,21 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:HFBN+A==,iv:aoPAf/patsE6P4o0qQE/Qhb3IWllZEkgjBGm1k2+n0s=,tag:eHLeN39K+oUxCPZLBQ+j6g==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:3yuF7BWt1PbfEMKG9w4=,iv:AhrOlnl0TMV5xk/be+ZYyj0ZyC16Dy6Mrl+Df7Nx2A8=,tag:Q0TPodXybzRJRZhxeSEbVA==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:ku+BQYqJ4RL7qXKVzXY=,iv:xxcC0WMr/FzERh1CJUOo0+p4TGMfgjidWHyVq2Hh0Mg=,tag:oEiR97E71TRqrWlpsZbW8g==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:b5A7dyQtWA==,iv:kYzK5gwPdbFn3njNueqpuXB+RBhs+8i2Qf/Mew9tep0=,tag:KpZH/2OqwW5WQ69yYE/Ukg==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:W9MRDQ==,iv:NvzsEaifUyH0hqZSJfhU83rPk0JKqNx2pt238tEAuok=,tag:9VGw16jcbZyBNh12bU3oGw==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:xqJI43pZTA==,iv:QosBmh4xZPN1Tmvwj07BpI0ogggPwAs5XkRb5Bs0I/8=,tag:ym50k60N5yaZWZrYst5Yeg==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:MGk9+vibiA==,iv:TD1L6EHmn+DLY9kCuY81Fy1XbvVOKc2qtVoc3aoTxGs=,tag:E4lMhCyvE4X6AQXJTNpmeA==,type:str]
-    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:VLIF5Q==,iv:hAv7bZlyGD0uSj1Xv1818PkAO/Sayp17Q8eE9phmrl0=,tag:xI9BiEngW16zRE33LNpNmQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:lBy3WZdc,iv:OAuFV14K/SIDxGyIr/9Bu9HZuyTCFuU4xdtRkx7g38g=,tag:DBhoaPhjBImwr/6liLeYrw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:rH6n6w==,iv:fZ9SQ6YbQq+JL095qCFqFAFQ42Vj+oirEIsNSMdQYrk=,tag:QL3pwgB1u+WHKd2X4AlLPw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:2H+Ibzc=,iv:0gHAv2Ldd8IE513EmrgF93rkyLolXkJSan4H+W661Ts=,tag:zAyt+5pkbmhp5KRA0z5HCg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:6apTJ7THRL8tY+zFbfBK4/Yb28kv/4UgqMCJMC4=,iv:rdZhtXCTMjYrrP5wazRINR/0ydApatUX8Il8s2ghP3w=,tag:MivdlL3lZeY0yUA5GQKhkQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:j/omfcZ/kQGC10w5KLxfhgw7+TrJ0h3XQr2y013tcgwEymCk,iv:yBBl1VbNz/GiSA0lBPap2h4wJPgWuX+JZeogMcAOLlE=,tag:28AdOthqc73zXJ56S0z8IQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:jjDGtPWtkA0oifUshgjY/jXqTj8=,iv:l0dWPQMJc+rC2vfst/E01SU192AnpKwY+XQNi3tYf6o=,tag:07z17WixQ9vF4gBhgn23Dg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:dtX74/W8ZFHrKLXv5wzLlyWiFlF+amg3YSXzhACQxDe5/kmueMLHx2AIXKYr,iv:+TKHBjNmFFaw8GwkZVRtILehC4QNQszp8TUuK+NJpAI=,tag:nuoSzbTUb7aHVqLqNBPhzA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:C5BdiDDSLJ62RuuiLR6nr6SURSzSRnXLnMTXAmB5qyfxCAmZImiuaI0=,iv:h+RSXVECv8IMfp+gdHMgq06aeUCg8xZsIcc0sgB5zXw=,tag:A26kNtNmgHa6VlHK2QQjyQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:1DUkMJ6JWG4XcBp/jrsR/zqFHkVmqbZbSW7H0wIYDxGIOU7zrN12rFMkMnE=,iv:Nlaoqdp3zVs+EtPzDcT9PldPe7yEFgqzVhmJ6v+RVys=,tag:eo1ST69jxfas4zDOWFqJdw==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:QjG44Q==,iv:Rc8V38C81E+lUHS0qVg8pZF8pgcNb/fal+2Mku59mgw=,tag:TdnOKh3JhyzWaT4gDa03oQ==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:wb/rspgATVubhhcZugs=,iv:ezV7J8wjcoF/fAN75jR6oQrgYuyN8t/c878RGzeZ3xw=,tag:4zLQ6Q/+L4La25RvltjJGw==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:yXxY7PmsiE0QMM53cIY=,iv:xzwna6qb6OftGkyXCVH94oux7y7oUxGHexHSf7qCR7Y=,tag:fdtA7FHC7px7zlqu4D6jNg==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:WBfMIS9JWQ==,iv:FfzLnQ0cqzPWBnSDT7Is+u3Pzi49qf7mdFqBYc1plcg=,tag:/Fdzx6VrKzrHpPxPqQfeyA==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:FqDupg==,iv:UYRIXmosqr6a3RN2zPxEyWbDkHljtcR/M9bFBa4MGb4=,tag:Xrj8edlUOt/fXBZ9L7q4Tw==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:ZoR2vwylug==,iv:UVDBKXWjzOGHBFKdtEZXnH0WNHIuLj68nkgfI8i4/lU=,tag:jpUSIcp+4GQ4uuvfQC95Xg==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:ZmpS6uVBaQ==,iv:Igle2xOpUfzmb+ZQBJfmmaskvbdioiDCny3zSvkCnUI=,tag:Fyi/cKf5cePv20KWH/RhFQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:NkCpn3zl,iv:wAQ4KLnF08k/P84CvTUyn4h8ZTT/pWSYGtaMKgpOIlc=,tag:03DnMQqOr77QkfTrc1dvmA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:Ql0iUQ==,iv:W4yek4lszA/97eI6ZX1vOwYTwWQcM4i9crdlLvuBV60=,tag:cwzURHCRtd9HCWPB6EAIWQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:behk+w6wi2imZx5L6ihNVX/R3Ad8ug1CF0ZggHM=,iv:dRCnAh8yRqVkP4iZE91rUpwfr01fIiiI4cM+B9CzVDY=,tag:5jJOwyJsAw1GpC11ysDfTA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:zX+IN/hl0/Yzjdb/2QPCEU2JB33VJgsoVHMwdkYQsSVKGGuS,iv:J3gW5GhpWLtqsGpRbY9U/htsapUM+YL4XJ16I/MVJJ0=,tag:r8/yaaGUJtLgxgjsks8aWA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:3wIcJH75PX2ZsG6q3dmVE1YfKz0=,iv:EVg2z5s9LbwYmkJ64rfPKnbEnUuN/SCLW6uJTM5ckZc=,tag:G3Jsm2NJJgTJi1KUCCVIjA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:rzgJ+XneMmGHlRXW4i8Bt8dRtwnjCtO7Lbk+wNVIpke0vZdxEhqdN3L8V3Uu,iv:Tk0lHTfO+kjMEa5C16l15xoeRBwgMXHGpDzQJHg2Y1U=,tag:IzqJaH46EP7uGvlDKghmGg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:xdjtNiYuXRFgSJd7T5avoOztYWBM+frt4fExEtLTBcP0N2Zm9PyhVsc=,iv:r67985R7kfdR9LfgjhgmQxq/TiT7lxmUp9TmsbaDzi0=,tag:Krl5famLWSbMSEMMN/uf1A==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:mZ1icIJ0uYfArQ3u1R81PdTVybHTE0rpyzr1hieevbqeqQAMe6qZvAEw+Ao=,iv:O4yHeWFgoiB/Ut6UInVhc7gZx+NKh+Y4tSZgovmmzPM=,tag:fWwj74HAQe+AALdHrHUz6w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -30,14 +28,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPdS9QbnJ4N3dOVGlWdmJJ
-            Sm84emIrZ0wxbkNPMzlVbW5WUWxLNzVkL3dnCjNlR1RjVFRpdXk5UUNocVVmOTJU
-            NE1DQnpZK3hMUVJxNE1VVDZSREIwL3MKLS0tIExFMm41Vms5TStnR3ljQzd4ZUJR
-            elh5dWUvK1NUdXRNR2dhaXk4bEpDWWMKf04hrtEFNzZnqp2Xgcurka9JbNMVsCX+
-            Pm3VGYIM+rtrhMx+8IP8ZSdGX3Yf6yG1fX+fGY3elXvY1f81ej16fA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6M2FWUGFZSVpsZmNidC92
+            eXVqT1ZOYjhnQ2RNTCt1Vy9wVEc3T0kyaFhFCjVpVzRweE1ZQk8yMDdFZk5wdWpL
+            cTV5RzRUek43VnJUdS9sNUxUY3kxelEKLS0tIDd0UjhKLy91MGU3cTRXUHNyVlhU
+            Z0RrSUtibHUxODJ4R095WjBGUTJSc1kKJONa94wrBN14avIPmoGWdgRMwPqlRSXZ
+            AwvHvkgk2QuxzOz/OQM8Ri+Y0TH6XxoYoJF3F/vd7KJidys84b9JQQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-01T06:14:52Z"
-    mac: ENC[AES256_GCM,data:4JxXg0mof7sz7kpvJ2kYYrvLWhgxHkJuDVb5hOu5L0Tt21uHBX008GtJXjig5jUm8LJZFpqf2PjaBNE7XRbQn1B1IjiTaGZbx042jm8JOPgsEMAr2MQAHCuFhJADVTCqxHKfakF/UgXhPXvxMnEnTRDGSw+mGiJMpRvDJ1B1YZk=,iv:4MW33mDf3ws4EWlufKQQMMWogA+WRybXTbikJyoXyLk=,tag:k71sI5BKSaffgTMYcZZ1Ew==,type:str]
+    lastmodified: "2023-07-04T17:35:14Z"
+    mac: ENC[AES256_GCM,data:k7t3SaY/Vr4j5EJYGgtJ4Zqb7oomV3uqeadabXl2+or2HmtqkfCzHKOpF3PcLuisfcnJafhfw/w8E/EZh5gZm44eyPCxxyHsBO8psUJgdlbBQ8b5H3NnhuZ7BeKpyngd/AWIQtoa0osTVGHVmLU+B7T9gR3REL1+CiHSmM5RuZU=,iv:ThqbHtqaPyPJYaOekAJ5eCpK8phf4qblLW3DFhfIPys=,tag:EcVGE/elKP+28MpdtC+ocA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
