fix: allow signup

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,21 +4,23 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:QjG44Q==,iv:Rc8V38C81E+lUHS0qVg8pZF8pgcNb/fal+2Mku59mgw=,tag:TdnOKh3JhyzWaT4gDa03oQ==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:wb/rspgATVubhhcZugs=,iv:ezV7J8wjcoF/fAN75jR6oQrgYuyN8t/c878RGzeZ3xw=,tag:4zLQ6Q/+L4La25RvltjJGw==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:yXxY7PmsiE0QMM53cIY=,iv:xzwna6qb6OftGkyXCVH94oux7y7oUxGHexHSf7qCR7Y=,tag:fdtA7FHC7px7zlqu4D6jNg==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:WBfMIS9JWQ==,iv:FfzLnQ0cqzPWBnSDT7Is+u3Pzi49qf7mdFqBYc1plcg=,tag:/Fdzx6VrKzrHpPxPqQfeyA==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:FqDupg==,iv:UYRIXmosqr6a3RN2zPxEyWbDkHljtcR/M9bFBa4MGb4=,tag:Xrj8edlUOt/fXBZ9L7q4Tw==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:ZoR2vwylug==,iv:UVDBKXWjzOGHBFKdtEZXnH0WNHIuLj68nkgfI8i4/lU=,tag:jpUSIcp+4GQ4uuvfQC95Xg==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:ZmpS6uVBaQ==,iv:Igle2xOpUfzmb+ZQBJfmmaskvbdioiDCny3zSvkCnUI=,tag:Fyi/cKf5cePv20KWH/RhFQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:NkCpn3zl,iv:wAQ4KLnF08k/P84CvTUyn4h8ZTT/pWSYGtaMKgpOIlc=,tag:03DnMQqOr77QkfTrc1dvmA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:Ql0iUQ==,iv:W4yek4lszA/97eI6ZX1vOwYTwWQcM4i9crdlLvuBV60=,tag:cwzURHCRtd9HCWPB6EAIWQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:behk+w6wi2imZx5L6ihNVX/R3Ad8ug1CF0ZggHM=,iv:dRCnAh8yRqVkP4iZE91rUpwfr01fIiiI4cM+B9CzVDY=,tag:5jJOwyJsAw1GpC11ysDfTA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:zX+IN/hl0/Yzjdb/2QPCEU2JB33VJgsoVHMwdkYQsSVKGGuS,iv:J3gW5GhpWLtqsGpRbY9U/htsapUM+YL4XJ16I/MVJJ0=,tag:r8/yaaGUJtLgxgjsks8aWA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:3wIcJH75PX2ZsG6q3dmVE1YfKz0=,iv:EVg2z5s9LbwYmkJ64rfPKnbEnUuN/SCLW6uJTM5ckZc=,tag:G3Jsm2NJJgTJi1KUCCVIjA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:rzgJ+XneMmGHlRXW4i8Bt8dRtwnjCtO7Lbk+wNVIpke0vZdxEhqdN3L8V3Uu,iv:Tk0lHTfO+kjMEa5C16l15xoeRBwgMXHGpDzQJHg2Y1U=,tag:IzqJaH46EP7uGvlDKghmGg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:xdjtNiYuXRFgSJd7T5avoOztYWBM+frt4fExEtLTBcP0N2Zm9PyhVsc=,iv:r67985R7kfdR9LfgjhgmQxq/TiT7lxmUp9TmsbaDzi0=,tag:Krl5famLWSbMSEMMN/uf1A==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:mZ1icIJ0uYfArQ3u1R81PdTVybHTE0rpyzr1hieevbqeqQAMe6qZvAEw+Ao=,iv:O4yHeWFgoiB/Ut6UInVhc7gZx+NKh+Y4tSZgovmmzPM=,tag:fWwj74HAQe+AALdHrHUz6w==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:yaaL9g==,iv:g0gFqTiFnyDtCDTRYZk2W1KUeLFhaX6LaHcQX9oT92o=,tag:HJ1HKrNV1xT1CKCmyGXcDw==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:3AMn4mTNd5ievoBK25g=,iv:XWopXGBJAcq+Vze/0j7emOd0a2MgVNgZ1+irc3aggfo=,tag:x4L5u3BQkZUh9QuRrJPQdQ==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:yVnP1N8IPiyzH+pYZHg=,iv:gDQKv/11Kzeqbhusk7JUQ2BPO9oxkXWg6RTZPfOiGQI=,tag:+ApqFsTP6V2a6HKNc3Y4iw==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:lQz+Fv8fyQ==,iv:BmzB6GwARX9LZvh4WOtuktdBNqH6zcOeg5KZeFeJhE0=,tag:IXx7kPD8A9aE2kbecL+X/w==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:f1Sm/w==,iv:8TMlWgKjG5eodq3sw5ccyrJ0Lfac5eBwZ4H+9u46Ac8=,tag:zydNl8H7OhHKWLZ2Mwr+dQ==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:TeHQuSlY0A==,iv:yol7cs0t6I5ueyZ5oh3y8S3PmdP02CorCVmTUZbVTYc=,tag:aK0QHYQnSNhtsGkj6i5wnQ==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:wYbIp2RtGg==,iv:QGfdUdFAzAL85ascxvgRkke5n0kUlO11feK71dTpq0o=,tag:KAyMzW8+WV4z4DjwWneUEg==,type:str]
+    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:JgYYsQ==,iv:ELX08ACzLwdcWUfgsZF1xVtZvJVdswYQs6iNLP39emc=,tag:XaFXWtvphKwypHZLzNPTqg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:uvbTk1jQ,iv:thHb49jFX0R9oSJAy9+dndNu5bNPqBCrQ4/zE6xsijI=,tag:a70yHRNW/d7FqZ6OQRYbzw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:Qd8ybQ==,iv:pIy/TlxP23EcbuFeK5ZJ9RphCLmPI0oUZKCE7BlXKGo=,tag:t3prDM0zcNJcGuw8VeDjRg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:3HPPOw==,iv:ixaVFBAbNGbY/TjFLnpzvdP5eTOoNpcTOQXvYXGw1O4=,tag:ZSpNH0WJfYKqJFKDOSAw+g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:980EvnRbixM4pIAp4STow6rrJG+bkDS1rshnCT8=,iv:MJqe7JqSUPIdwIE0jkfwnyvmWxrAlUgCp2MkSJnutLo=,tag:IhBzlXc9t7vNZIb4ALfeYg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:ylliUHL+X/yW3pgZDalIzTa0bp06oV0ZpANfo+bGdhRpv330,iv:cAf35/WOo6IURJYqBzSJ1ow/1GM25E1iG4IVccr4/Ac=,tag:pC8cmFXY7/FWaPtf+Ix/mw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:R3V5JVZ1LWIn8xU0tHW7yX2ozSk=,iv:Yn3J3YQj9rIBiSXzuJ+f1oIKu4TkwtHWWXmhx+DJHm4=,tag:CUF6qYoXXMvkMAdAT3kF/g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:X2hfdkeAtHYcP5W6+XASVvAPALp826//4lD77d6mZT9Nhe2HOFr0dROO4wY9,iv:sBqy7X/uSk+Xj6W8BItWUXSEEubT40IJqw1bHNhYXk4=,tag:Gm9wKvF3YlzjzCfzwbTGTg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:jaJCwc9tDCRuU1hmsfq3A1V41CPDd+8DWJTjRZbK5NtCwfdiIozSx3U=,iv:DYtzGb3IoOYU2adygT2pJ9mz/jhKciiqkKsXP5Tnq+M=,tag:WvDJsczzVfG2msHCwXCVqg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:spBDbEmdy+2aXSHRqpMSxMGu3jTKLQIiSZ+ReyeiCOBC1X8XMmNrF9vWCXo=,iv:jYt6rYHqZAHZZ2gBcTWdkQUU8uGUp6hPCeJHHoalVtI=,tag:PydkYfYR/BiECS13B6FtaA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,14 +30,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6M2FWUGFZSVpsZmNidC92
-            eXVqT1ZOYjhnQ2RNTCt1Vy9wVEc3T0kyaFhFCjVpVzRweE1ZQk8yMDdFZk5wdWpL
-            cTV5RzRUek43VnJUdS9sNUxUY3kxelEKLS0tIDd0UjhKLy91MGU3cTRXUHNyVlhU
-            Z0RrSUtibHUxODJ4R095WjBGUTJSc1kKJONa94wrBN14avIPmoGWdgRMwPqlRSXZ
-            AwvHvkgk2QuxzOz/OQM8Ri+Y0TH6XxoYoJF3F/vd7KJidys84b9JQQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudmRHNEJ1T2NjL0JuRlVj
+            cmZNOUcxU0JnS2tqOVE1aUJrWk5CQ09TRlZvClFydWdZUGQySlNWY2dTaDNDbTIz
+            ZHJDaVVNVS96OTJsdFFMTVJrVlBtUm8KLS0tIC9XNUdTbHYwNlg2UWs2UUlaZjQy
+            YmJ5RW81czRQZHBaQURROVdyMkJEbG8KNp54GNQmnZcZF5bsHHb2NrTzinYLPzv7
+            9l+Xctbmd/mMbbpfymibdF9jvp3RI3f5718nuQjoT+gr1FWlXXhS5A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T17:35:14Z"
-    mac: ENC[AES256_GCM,data:k7t3SaY/Vr4j5EJYGgtJ4Zqb7oomV3uqeadabXl2+or2HmtqkfCzHKOpF3PcLuisfcnJafhfw/w8E/EZh5gZm44eyPCxxyHsBO8psUJgdlbBQ8b5H3NnhuZ7BeKpyngd/AWIQtoa0osTVGHVmLU+B7T9gR3REL1+CiHSmM5RuZU=,iv:ThqbHtqaPyPJYaOekAJ5eCpK8phf4qblLW3DFhfIPys=,tag:EcVGE/elKP+28MpdtC+ocA==,type:str]
+    lastmodified: "2023-07-04T17:37:40Z"
+    mac: ENC[AES256_GCM,data:aiN7zqb8PWJLkVabuMkv1leImO3yknvcmrdSo2Qaes7wCwB74NEYqqKYGPmiaaUXS88OLqUZ9VYAcqrIKiueTJ00Hlas7nq9ZDhYoacxXTLJp+Rx7v2dhxnjQ3fgWefsqe2SHPNj+B84oKFPvpOhqeuk1AVWBEh/MIp1nX6iEg4=,iv:4IZ8VEE1Bxcjbd46l1iMrA7j64bcEn5PTVqqotjuB18=,tag:TVpqst93fTesyKcMfNaMKA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
