--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   components:
+    strategy:
+      matrix:
+        cluster: [development, production]
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -18,10 +21,7 @@ jobs:
         run: |
           flux install \
             --components-extra=image-reflector-controller,image-automation-controller \
-            --export > ./clusters/development/flux-system/gotk-components.yaml
-          flux install \
-            --components-extra=image-reflector-controller,image-automation-controller \
-            --export > ./clusters/production/flux-system/gotk-components.yaml
+            --export > ./clusters/${{ matrix.cluster }}/flux-system/gotk-components.yaml
 
           VERSION="$(flux -v)"
           echo "::set-output name=flux_version::$VERSION"
@@ -29,8 +29,8 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
-            branch: update-flux
-            commit-message: Update to ${{ steps.update.outputs.flux_version }}
-            title: Update to ${{ steps.update.outputs.flux_version }}
+            branch: update-flux-${{ matrix.cluster }}
+            commit-message: Update ${{ matrix.cluster }} to ${{ steps.update.outputs.flux_version }}
+            title: Update ${{ matrix.cluster }} to ${{ steps.update.outputs.flux_version }}
             body: |
               ${{ steps.update.outputs.flux_version }}
