--- a/clusters/development/istio-base/kustomization.yaml
+++ b/clusters/development/istio-base/kustomization.yaml
@@ -3,5 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../core/istio
-patchesStrategicMerge:
-  - gateways.yaml
+patches:
+  - path: gateways.yaml
+    target:
+      kind: HelmRelease
