--- a/clusters/production/internal.yaml
+++ b/clusters/production/internal.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: git-internal
@@ -12,7 +12,7 @@ spec:
     name: git-internal
   url: ssh://git@ssh.git.cc.private.hm.edu/zit/k8s
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: git-internal
