--- a/clusters/production/monitoring/flux/git.yaml
+++ b/clusters/production/monitoring/flux/git.yaml
@@ -1,4 +1,4 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta1
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: flux-monitoring
@@ -15,7 +15,7 @@ spec:
     # include manifests dir
     !/manifests/monitoring/monitoring-config
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitoring-config
