--- a/clusters/production/portal/frontend/portal-frontend.yaml
+++ b/clusters/production/portal/frontend/portal-frontend.yaml
@@ -30,6 +30,12 @@ spec:
           ports:
             - containerPort: 3000
               protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 30
 ---
 apiVersion: v1
 kind: Service
