fix: disable role mapping

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,23 +4,24 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:yaaL9g==,iv:g0gFqTiFnyDtCDTRYZk2W1KUeLFhaX6LaHcQX9oT92o=,tag:HJ1HKrNV1xT1CKCmyGXcDw==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:3AMn4mTNd5ievoBK25g=,iv:XWopXGBJAcq+Vze/0j7emOd0a2MgVNgZ1+irc3aggfo=,tag:x4L5u3BQkZUh9QuRrJPQdQ==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:yVnP1N8IPiyzH+pYZHg=,iv:gDQKv/11Kzeqbhusk7JUQ2BPO9oxkXWg6RTZPfOiGQI=,tag:+ApqFsTP6V2a6HKNc3Y4iw==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:lQz+Fv8fyQ==,iv:BmzB6GwARX9LZvh4WOtuktdBNqH6zcOeg5KZeFeJhE0=,tag:IXx7kPD8A9aE2kbecL+X/w==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:f1Sm/w==,iv:8TMlWgKjG5eodq3sw5ccyrJ0Lfac5eBwZ4H+9u46Ac8=,tag:zydNl8H7OhHKWLZ2Mwr+dQ==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:TeHQuSlY0A==,iv:yol7cs0t6I5ueyZ5oh3y8S3PmdP02CorCVmTUZbVTYc=,tag:aK0QHYQnSNhtsGkj6i5wnQ==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:wYbIp2RtGg==,iv:QGfdUdFAzAL85ascxvgRkke5n0kUlO11feK71dTpq0o=,tag:KAyMzW8+WV4z4DjwWneUEg==,type:str]
-    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:JgYYsQ==,iv:ELX08ACzLwdcWUfgsZF1xVtZvJVdswYQs6iNLP39emc=,tag:XaFXWtvphKwypHZLzNPTqg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:uvbTk1jQ,iv:thHb49jFX0R9oSJAy9+dndNu5bNPqBCrQ4/zE6xsijI=,tag:a70yHRNW/d7FqZ6OQRYbzw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:Qd8ybQ==,iv:pIy/TlxP23EcbuFeK5ZJ9RphCLmPI0oUZKCE7BlXKGo=,tag:t3prDM0zcNJcGuw8VeDjRg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:3HPPOw==,iv:ixaVFBAbNGbY/TjFLnpzvdP5eTOoNpcTOQXvYXGw1O4=,tag:ZSpNH0WJfYKqJFKDOSAw+g==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:980EvnRbixM4pIAp4STow6rrJG+bkDS1rshnCT8=,iv:MJqe7JqSUPIdwIE0jkfwnyvmWxrAlUgCp2MkSJnutLo=,tag:IhBzlXc9t7vNZIb4ALfeYg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:ylliUHL+X/yW3pgZDalIzTa0bp06oV0ZpANfo+bGdhRpv330,iv:cAf35/WOo6IURJYqBzSJ1ow/1GM25E1iG4IVccr4/Ac=,tag:pC8cmFXY7/FWaPtf+Ix/mw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:R3V5JVZ1LWIn8xU0tHW7yX2ozSk=,iv:Yn3J3YQj9rIBiSXzuJ+f1oIKu4TkwtHWWXmhx+DJHm4=,tag:CUF6qYoXXMvkMAdAT3kF/g==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:X2hfdkeAtHYcP5W6+XASVvAPALp826//4lD77d6mZT9Nhe2HOFr0dROO4wY9,iv:sBqy7X/uSk+Xj6W8BItWUXSEEubT40IJqw1bHNhYXk4=,tag:Gm9wKvF3YlzjzCfzwbTGTg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:jaJCwc9tDCRuU1hmsfq3A1V41CPDd+8DWJTjRZbK5NtCwfdiIozSx3U=,iv:DYtzGb3IoOYU2adygT2pJ9mz/jhKciiqkKsXP5Tnq+M=,tag:WvDJsczzVfG2msHCwXCVqg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:spBDbEmdy+2aXSHRqpMSxMGu3jTKLQIiSZ+ReyeiCOBC1X8XMmNrF9vWCXo=,iv:jYt6rYHqZAHZZ2gBcTWdkQUU8uGUp6hPCeJHHoalVtI=,tag:PydkYfYR/BiECS13B6FtaA==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:IgTsuw==,iv:KuWvh9oRpfkZyOwMa5lqCUD1tphgyQsTQuAAyHoCGDU=,tag:+3ry31BQRepExqp56dGp7Q==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:Ym/+cAHT6ugrWuWkpBM=,iv:FPdOajPSejPsIy1lcbyeQYs2orZztpgLiKhmtKnww8s=,tag:i6sPEil4nxC3YXv067Bbfw==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:ctILj7jc30YFWhpjY+Q=,iv:CR2ie9hlNgmI8euBpbXM7UEs866f5+P+ayWj6ynXSCc=,tag:PYs3K2TFmxQ1dXSJkPz3sg==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:4G+6XKmeLQ==,iv:2lYyvvIKA52CjtjtXjmAF6bavUrFDd7dOyOdnSl650U=,tag:rY4yW6Dmfo9/xmIQ2wDGug==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:ZMELgw==,iv:22z09MpfDu0CfnCx5qYCVygp0SMvK1/wghhJbg6cm8g=,tag:Ytx40aa8ZWLlPaiaAEKGMQ==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:nr/gIt/iJQ==,iv:jKeQx/ggyzCEando+Dv65Cu1T8StukO+BbYzX7L2HXM=,tag:Dj4Iw9G/OD/zVECoLjrhww==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:zsaz0WnMNA==,iv:DbupUpxLAdl8XkprtHScHu8eunuPDLdxGZ3jJJCFW8Y=,tag:xxxviROBy/KFXP8HOg35rA==,type:str]
+    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:i3T/xA==,iv:1a/vH9dq6P01B+vFlKkSR/werc1+xvsCgx402RRq5jo=,tag:zWe8ZMx10Qv7xV5FH3es1Q==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:Ml2PkAte,iv:/mnIPYXMSr4uEBiywcs564QhJEGtJ51wn9YyJlqlmw4=,tag:30tKGI7L6TBhs5fGYntOLQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:vhgkSA==,iv:GT97aZCWql5JNikpEHMzWOpiAvFRfOXOOhJ1XlRCxMw=,tag:1DaS1l2HjyewrkUX9k2jug==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:S4Zxcg==,iv:IeAyZAS1T40zUZiCacMTTmF3Fgj4MYzbQ2Lfa5hE1R8=,tag:V0vmPga6MrVnoN3egNt26Q==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:KaS2eJmLQ5+rfYN4Nchr3MDfYT6tR7Xz2W2UdSA=,iv:fxZYowKGe9t1dSbWBNjmI97bmHRXD272+PZhiDNOymQ=,tag:GFlCEDUV7H1RrNa1FNWOdw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:8gyUu9c/BRWUU+TgYWoTtHufBnZ2j5T+BfRvwOzVuymbckCy,iv:IMbWFvBgKRX4bepKuYBcvttdjamErnjLmopWTpCv9us=,tag:npSLZ3/B0mFVNb5U3ZRi5Q==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:6Hce0JUle+tZ8cxT4A4f1fgyPII=,iv:sKnQgD34kuCLkV3Je3AFAZDnB57G6nKd5d2DZau89d0=,tag:gud5+lBXyRdmjHDw+R3l7g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:gNQ2aklRrv0NVLxTnU1mPoJamTLqwC4UmJ/hKrkjj/wE67GRCpjllN/wx1op,iv:EEE/BS7lGNAdTEVyeJyh3hNX3hjodrEcAC50fFGySPI=,tag:9Tw/SEnBQPMRNJxN6c9AUg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:r00ViP2Q+Ny8rmMQst2D74yg85rn0ULqUFk2q3I9woVDA4soQT+b9Gs=,iv:98u7NZxw3Tv2kcInzKK88AZ0hCR3/7CogzW5ulUExHo=,tag:5r67liUYjpy1nZNiDEXmXA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:qMOtCGLgs9kW3ISzRLlH1VpQiySD7BM54jg8ehG5Zi6ynbliC6YCb+Wm3fk=,iv:GPnmYErKAezE6inxFZQq++np02/1EBUIqcW5QRR8YOE=,tag:i+qJtxWliUGCFl1TMjMHvg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SKIP_ORG_ROLE_SYNC: ENC[AES256_GCM,data:0D9+xQ==,iv:0LQIljmJVIlKPIxgRCvD4/7ggcG6RdXxVZEXSSEHGHw=,tag:nqrE0/QzgjBHumdnzhZeKg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -30,14 +31,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudmRHNEJ1T2NjL0JuRlVj
-            cmZNOUcxU0JnS2tqOVE1aUJrWk5CQ09TRlZvClFydWdZUGQySlNWY2dTaDNDbTIz
-            ZHJDaVVNVS96OTJsdFFMTVJrVlBtUm8KLS0tIC9XNUdTbHYwNlg2UWs2UUlaZjQy
-            YmJ5RW81czRQZHBaQURROVdyMkJEbG8KNp54GNQmnZcZF5bsHHb2NrTzinYLPzv7
-            9l+Xctbmd/mMbbpfymibdF9jvp3RI3f5718nuQjoT+gr1FWlXXhS5A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPaVpwZUtnMW5PdHRvNkNl
+            Z1BjenQxU281ZnlkODRsNmpoVHhxRXI5MkZrCkIyeGhuOG1UMXZJVEhoSDVLYW1W
+            R2o2MEx6NGhZK3ZyaWN6VWpqY1NvVFUKLS0tIDNiTmZNNHNBOTRJRGFDQyt6ZzRU
+            TnZVVXlJQ2tKTytYc2oxZGZodFAwMmcKfsve6pXvN7AaChm1H0AbJysuih/f2R20
+            JRrCqNviY3+ZASOEmyWbvR6A63LgFTgXZhBkECSazi/Zr7Qw9Uqc7A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T17:37:40Z"
-    mac: ENC[AES256_GCM,data:aiN7zqb8PWJLkVabuMkv1leImO3yknvcmrdSo2Qaes7wCwB74NEYqqKYGPmiaaUXS88OLqUZ9VYAcqrIKiueTJ00Hlas7nq9ZDhYoacxXTLJp+Rx7v2dhxnjQ3fgWefsqe2SHPNj+B84oKFPvpOhqeuk1AVWBEh/MIp1nX6iEg4=,iv:4IZ8VEE1Bxcjbd46l1iMrA7j64bcEn5PTVqqotjuB18=,tag:TVpqst93fTesyKcMfNaMKA==,type:str]
+    lastmodified: "2023-09-11T04:15:23Z"
+    mac: ENC[AES256_GCM,data:XoS4ywoBbiO64TUOeMhCwux0F+QEUroYB+YAfjNg7S5+mXDEbw6tyX/EU6I/RLphb+jIG2Rg38yET1bAdSfvRz0gGbH55/uX40Og+bvc7wEvVkYeVIj70CW+T9P9iTh7gb079szDTL0Y6GkpJNcWBHSZ+Jh0e4UGktAR9jJ2kLQ=,iv:CkxbUQ8p6ka10le/r+NQ1UUAM+HoVg8diUDmQ0yyn3U=,tag:1te2wcQBqZvEqaHhQGAQ0g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
